2007-06-25  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-comp): Use pushd and popd.

2007-06-25  Christian Faulhammer  <opfer@gentoo.org>

	* elisp-common.eclass: Add einfo output for all functions

2007-06-24  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: added DOCS variable for src_install

2007-06-23  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-comp): Check for Emacs return status.
	Test numerical condition and return instead of exit.
	Call Emacs with arguments in their canonical form.

2007-06-21  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: added a comment when the site-start generation
	hints reveal nearly no output

	* elisp-common.eclass: added hint why has_version is not needed in
	connection with elisp-site-regen() and pkg_postrm

2007-06-20  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass: Generate output in
	elisp-site-regen only if site-gentoo.el has changed.

	* elisp-common.eclass: Generate output in
	elisp-site-regen only if site-gentoo.el has changed.

2007-06-20  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: add --silent option to elisp_pkg_postrm()

	* elisp-common.eclass: applied changes for a silent option for elisp-site-regen()

2007-06-12  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass: Add more explanations to error message. Function
	elisp_pkg_setup moved down to proper place.

2007-06-12  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: remove an uncessary test

2007-06-11  Christian Faulhammer  <opfer@gentoo.org>

	* elisp.eclass: set free the ghosts of the NEED_EMACS depending
	scheme, for the new-style Emacs virtuals

2007-06-04  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass: New function elisp-emacs-version(), works for all
	known Emacs versions.  Use versionator.eclass for comparison of versions.

	* elisp-common.eclass: New function elisp-emacs-version(), works for
	all known Emacs versions.  Use versionator.eclass for comparison